[package]
name = "rnp"
version = "0.1.0"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2018"
description = "A simple layer 4 ping tool for cloud."
license = "Apache-2.0"
keywords = ["network", "utility", "ping", "tcpping", "tcp"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/r12f/rnp"
build = "build.rs"

[package.metadata.winres]
ProductName = "Rnp"
OriginalFilename = "rnp.exe"
CompanyName = "r12f"
LegalCopyright = "Copyright (c) 2021"

[dependencies]
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
env_logger = "0.8"
structopt = { version = "0.3", features = ["color", "suggestions", "wrap_help"] }
ctrlc = "3.1.9"
socket2 = "0.4.0"
futures-intrusive = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
contracts = "0.6.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
rand = "0.8"
thiserror = "1.0.26"
async-trait = "0.1.50"
serde = { version = "1.0", features = ["derive"] }
num = "0.4.0"

[target.'cfg(any(not(target_os = "windows"), not(target_arch = "aarch64")))'.dependencies]
quinn = "0.7.2"
rustls = { version = "0.19.1", features = ["dangerous_configuration", "quic"] }
webpki = "0.21"

[build-dependencies]
winres = "0.1.11"

[dev-dependencies]
async-std = "1.9.0"
pretty_assertions = "0.7.2"
serde_json = "1.0"
csv = "1.1"

[profile.dev]
panic = "abort"             # Abort on panic to make it more friendly for debugger

[profile.release]
opt-level = 'z'             # Optimize for size.
lto = true                  # Enable link time optimization
codegen-units = 1           # Using 1 codegen units to help getting more optimization on binary size.
panic = 'abort'             # Avoid generating stack unwind code.

[[bin]]
name = "rnp"
