[package]
name = "rnp"
version = "0.1.0"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2018"
description = "A simple layer 4 ping tool for cloud."
license = "Apache-2.0"
keywords = ["network", "utility", "ping", "tcpping", "tcp"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/r12f/rnp"
build = "build.rs"

[package.metadata.winres]
ProductName = "Rnp"
OriginalFilename = "rnp.exe"
CompanyName = "r12f"
LegalCopyright = "Copyright (c) 2021"

[dependencies]
log = "0.4.14"
tracing = { version = "0.1.29", features = ["log"] }
env_logger = "0.9.0"
structopt = { version = "0.3.25", features = ["color", "suggestions", "wrap_help"] }
ctrlc = "3.2.1"
socket2 = "0.4.2"
futures-intrusive = "0.4.0"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
contracts = "0.6.2"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
rand = "0.8.4"
thiserror = "1.0.30"
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
num = "0.4.0"

[target.'cfg(any(not(target_os = "windows"), not(target_arch = "aarch64")))'.dependencies]
quinn = "0.7.2"
rustls = { version = "0.19.1", features = ["dangerous_configuration", "quic"] }
webpki = "0.21"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
async-std = "1.10.0"
pretty_assertions = "1.0.0"
serde_json = "1.0.70"
csv = "1.1.6"

[profile.dev]
panic = "abort"             # Abort on panic to make it more friendly for debugger

[profile.release]
opt-level = 'z'             # Optimize for size.
lto = true                  # Enable link time optimization
codegen-units = 1           # Using 1 codegen units to help getting more optimization on binary size.
panic = 'abort'             # Avoid generating stack unwind code.

[[bin]]
name = "rnp"

[[bin]]
name = "rnp_server"
