[package]
name = "rnp"
version = "0.1.0"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2018"
description = "A simple layer 4 ping tool for cloud."
license = "Apache-2.0"
keywords = ["network", "utility", "ping", "tcpping", "tcp"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/r12f/rnp"
build = "build.rs"

[package.metadata.winres]
ProductName = "Rnp"
OriginalFilename = "rnp.exe"
CompanyName = "r12f"
LegalCopyright = "Copyright (c) 2021"

[dependencies]
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
env_logger = "0.10.0"
structopt = { version = "0.3.26", features = ["color", "suggestions", "wrap_help"] }
ctrlc = "3.2.5"
socket2 = "0.5.1"
futures-intrusive = "0.5.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
contracts = "0.6.3"
chrono = { version = "0.4.23", features = ["serde", "rustc-serialize"] }
rand = "0.8.5"
thiserror = "1.0.39"
async-trait = "0.1.66"
serde = { version = "1.0.152", features = ["derive"] }
num = "0.4.0"

[target.'cfg(any(not(target_os = "windows"), not(target_arch = "aarch64")))'.dependencies]
quinn = "0.9.3"
rustls = { version = "0.20.8", features = ["dangerous_configuration", "quic"] }
webpki = "0.22.0"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
async-std = "1.12.0"
pretty_assertions = "1.3.0"
serde_json = "1.0.94"
csv = "1.2.1"

[profile.dev]
panic = "abort"             # Abort on panic to make it more friendly for debugger

[profile.release]
opt-level = 'z'             # Optimize for size.
lto = true                  # Enable link time optimization
codegen-units = 1           # Using 1 codegen units to help getting more optimization on binary size.
panic = 'abort'             # Avoid generating stack unwind code.

[[bin]]
name = "rnp"

[[bin]]
name = "rnp_server"
